--- a/lib/ui/BUILD.gn
+++ b/lib/ui/BUILD.gn
@@ -140,6 +140,8 @@ source_set("ui") {
     "window/platform_configuration.h",
     "window/platform_message.cc",
     "window/platform_message.h",
+    "window/platform_message_listener_dart_port.cc",
+    "window/platform_message_listener_dart_port.h",
     "window/platform_message_response.cc",
     "window/platform_message_response.h",
     "window/platform_message_response_dart.cc",
@@ -273,6 +275,7 @@ if (enable_unittests) {
       "painting/single_frame_codec_unittests.cc",
       "semantics/semantics_update_builder_unittests.cc",
       "window/platform_configuration_unittests.cc",
+      "window/platform_message_listener_dart_port_unittests.cc",
       "window/platform_message_response_dart_port_unittests.cc",
       "window/platform_message_response_dart_unittests.cc",
       "window/pointer_data_packet_converter_unittests.cc",
